Update operation for Authors
