# server/src/types/author.ts
@@ -1,0 +1,11 @@
+/**
+ * Types needed for the Author model beyond the model declaration itself.
+ */
+
+export type AuthorUpdateData = {
+  name: string;
+  aliases?: {
+    name: string;
+    deleted?: boolean;
+  }[];
+};
